--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -3,7 +3,7 @@
   <container class="flex justify-between">
     <div class="flex flex-column justify-between measure-wide">
   <h2 class="f1 f-subheadline-l sans-serif accent mb1-l mt0-l">Who we are</h2>
-        <div> <p class="f2 lh-copy   ">
+        <div> <p class="f3 lh-copy   ">
       We are a team of technologists, designers, and community organizers who value working with mission-oriented partners.
         <br/>
         <br/>
@@ -11,7 +11,7 @@
     </p> </div>
         <div>
           
-      <p class="f2 mb0 ">Read more about <a class="link accent" href="/people/">Our Team</a></p>
+      <p class="f3 mb0 ">Read more about <a class="link accent" href="/people/">Our team.</a></p>
         </div>
     </div>
     <div class="w-50">
