--- a/_includes/sections/work-preview.html
+++ b/_includes/sections/work-preview.html
@@ -11,7 +11,7 @@
     {% endfor %}
   </div>
   <p class="f4">
-    A full list of our works may be found on our
+    A full list of our current projects can be found on our
     <a class="accent link underline-hover" href="/work/">Work page.</a>
   </p>
 </div>
