--- a/_includes/sections/join-the-team.html
+++ b/_includes/sections/join-the-team.html
@@ -2,9 +2,9 @@
   <div class="w-100-l">
     <h2 class="f1 f-subheadline-l sans-serif accent mb1">Join the team</h2>
 
-    <h3 class="f3 mb5 f2-l normal lh-solid measure-narrow dark-gray sans-serif">Find out more about open positions and pathways to membership</h3>
+    <h3 class="f3 mb3 f3-l normal lh-solid measure-narrow dark-gray sans-serif">Find out more about open positions and pathways to membership.</h3>
     
-    <h3 class="mb4 mt0 f3">View our job openings</h3>
+    <h3 class="mb4 mt0 f2">View our job openings</h3>
     <div class="w-100 flex flex-wrap mb4">
     {% for opening in site.openings %}
     <div class="measure pr5 mb3">
@@ -18,7 +18,7 @@
   </div>
 
     <h3 class="mb3 mt0 f3">Read our membership policies</h3>
-      <p class="ml0 mt0 f3 pv2"><a class="accent f3 link underline-hover" href="mailto:{{ site.email-hidden }}">Handbook</a></p>
+      <p class="ml0 mt0 f3 pv2"><a class="accent f3 link underline-hover" href="https://handbook.hypha.coop/member-workers.html">Handbook</a></p>
   </div>
 
 </div>
