add homepage images

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,6 +1,7 @@
 <div class="flex-l items-center mv2">
-  <div class="w-100-l">
-    <h3 class="measure-wide f2 f1-m f-subheadline-l measure-narrow lh-title accent normal sans-serif">
+  <div class="w-100-l cover">
+    <!-- <div class="vh-100 dt w-100 tc  white cover root" > -->
+    <h3 class="w-70 f2 f1-m f1-l lh-title accent normal sans-serif">
       Hypha collaborates with communities to build better relationships with technology.
     </h3>
   </div>
