--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -7,9 +7,9 @@
   </nav>
   <a href="#" class="dn bg-accent fixed top-0 left-0 bottom-0 w-25 backdrop o-60 z-max" tabindex="-1" hidden></a>
 </div>
-<div class="dn flex-l">
-  <p class="gray ma0 dib mr2 b">Email</p>
-  <a class="accent link underline-hover" href="mailto:{{ site.email-hidden }}">{{ site.email }}</a>
-</div>
+<!-- <div class="dn flex-l"> -->
+  <!-- <p class="gray ma0 dib mr2 b">Email</p> -->
+  <!-- <a class="accent link underline-hover" href="mailto:{{ site.email-hidden }}">{{ site.email }}</a> -->
+<!-- </div> -->
 
 <a href="#menu" aria-label="Open menu" class="dn-l f5 f3-ns link underline-hover accent sans-serif">Menu</a>
