--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -7,7 +7,7 @@
       We bring this ethos to every project we undertake.
     </p>
   </div>
-  <div class="w-50 scaling-3"></div>
+  <div class="w-50 block contain"></div>
 </div>
 
 <div class="flex flex-wrap">
