--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -9,7 +9,7 @@
       Our expertise spans ideation to infrastructure.
     </p>
   </div>
-  <figure class="scaling-3 w-50"></figure>
+  <!-- <figure class="scaling-3 w-50"></figure> -->
 </div>
 <div class="flex flex-wrap">
   <ul id="what_we_do" class="measure-narrow f4 mr4 pl0">
