--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="w-50">
-        <img  class="mw-100" src="/assets/images/mushroom.jpg" alt="mushroom x-rays"></img>
+        <img  class="mw-100" src="/assets/images/block2.png" alt="mushroom x-rays"></img>
     </div>
   </container>
 </div>
