--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -1,7 +1,12 @@
+    <p class="f3 f4-l fw7 lh-copy dark-gray">{{ site.footer }}</p>
 <div class="flex-l items-baseline">
   <div class="w-100 w-50-l pr5">
-    <p class="f3 f4-l fw7 lh-copy dark-gray">{{ site.footer }}</p>
-    <p class="f6 f5-l lh-copy">Data and privacy policies are in our handbook: <a href="https://handbook.hypha.coop/data.html" target="_blank" class="accent link underline-hover" rel="noopener">How We Use Data</a> and <a href="https://handbook.hypha.coop/working-open.html" target="_blank" class="accent link underline-hover" rel="noopener">Working Open</a>.</p>
+   <ul class="list pl0 flex flex-wrap f5 f4-l">
+      <li class="pr3"><a href="{{ site.github }}" class="accent link underline-hover" target="_blank" rel="noopener">GitHub</a></li>
+      <li class="pr3"><a href="{{ site.linkedin }}" class="accent link underline-hover" target="_blank" rel="noopener" data-proofer-ignore>LinkedIn</a></li>
+      <li class="pr3"><a href="{{ site.twitter }}" class="accent link underline-hover" target="_blank" rel="noopener">Twitter</a></li>
+      <li class="pr3"><a href="{{ site.handbook }}" class="accent link underline-hover" target="_blank" rel="noopener">Handbook</a></li>
+    </ul> <p class="f6 f5-l lh-copy">Data and privacy policies are in our handbook: <a href="https://handbook.hypha.coop/data.html" target="_blank" class="accent link underline-hover" rel="noopener">How We Use Data</a> and <a href="https://handbook.hypha.coop/working-open.html" target="_blank" class="accent link underline-hover" rel="noopener">Working Open</a>.</p>
     <p class="f6 f5-l lh-copy">
       This site is published using <a href="https://distributed.press/" target="_blank" class="accent link underline-hover" rel="noopener">Distributed Press</a>.
       You can <a href="https://github.com/hyphacoop/api.distributed.press" target="_blank" class="accent link underline-hover" rel="noopener">use it to publish</a> on the p2p and distributed web too.
@@ -12,12 +17,7 @@
   </div>
   <div class="w-100 w-50-l">
     <h4 class="f4 normal"><span class="accent">⚑</span> Hypha is rooted in Tkaronto (Toronto), Canada.</h4>
-    <ul class="list pl0 flex flex-wrap f5 f4-l">
-      <li class="pr3"><a href="{{ site.github }}" class="accent link underline-hover" target="_blank" rel="noopener">GitHub</a></li>
-      <li class="pr3"><a href="{{ site.linkedin }}" class="accent link underline-hover" target="_blank" rel="noopener" data-proofer-ignore>LinkedIn</a></li>
-      <li class="pr3"><a href="{{ site.twitter }}" class="accent link underline-hover" target="_blank" rel="noopener">Twitter</a></li>
-      <li class="pr3"><a href="{{ site.handbook }}" class="accent link underline-hover" target="_blank" rel="noopener">Handbook</a></li>
-    </ul>
+    
     <h4 class="f5 measure normal lh-copy">
       Hypha acknowledges the sacred land we work on is the territory of many nations and was the subject of the Dish with One Spoon Wampum Belt Covenant, an agreement to peaceably share and care for the resources around the Great Lakes. Today it is still home to many First Nations, Inuit, and Métis peoples from across Turtle Island.
     </h4>
