create separate files for js scripts - requires troubleshooting for render order

--- a/_includes/sections/team-bios.html
+++ b/_includes/sections/team-bios.html
@@ -1,20 +1,25 @@
 <div class="flex flex-wrap justify-start mb4 contain">
   {% for person in site.people %}
-<article class="w-33-l pl4 pr4 mb6 center">
+  <article class="w-33-l pl4 pr4 mb6 center">
     <div class="flex">
       <!-- <img src="{{ person.avatar }}" -->
-       <!-- class="br-100 h5 w5 dib" title="Photo of a kitty staring at you"> -->
-       <div class="h4 w4 bg-accent tc white f3 v-mid pt4">avatar</div>
+      <!-- class="br-100 h5 w5 dib" title="Photo of a kitty staring at you"> -->
+      <div class="h4 w4 bg-accent tc white f3 v-mid pt4">avatar</div>
       <div class="pl4 w-50 pt0 pt0-l">
-      <div class="f3 lw-5 accent pt0 pt0-l lh-title pb1">
-        <b>{{ person.name }}</b>
+        <div class="f3 lw-5 accent pt0 pt0-l lh-title pb1">
+          <b>{{ person.name }}</b>
+        </div>
+        <h2 class="f4 fw4 mt0">{{ person.pronouns }}</h2>
       </div>
-      <h2 class="f4 fw4 mt0">
- {{ person.pronouns }}
-    </h2>
-  </div>
     </div>
-  <div class="lh-copy measure center f5 pt3">{{ person.content | markdownify }}</div>
+    <div
+      class="lh-copy measure center f5 pt3 {% unless person.excerpt == person.content %} pointer {% endunless %}"
+    >
+      {{ person.excerpt | markdownify }}
+    {% unless person.excerpt == person.content %}
+    <p class="mv0 link accent">... read more</p>
+    {% endunless %}
+    </div>
   </article>
-{% endfor %}
+  {% endfor %}
 </div>
