update member copy

--- a/_sass/_hypha.scss
+++ b/_sass/_hypha.scss
@@ -95,6 +95,12 @@ mark {
 .electric-lines {
   background-image: url(/assets/images/footer1.png);
 }
+.canopy {
+  background-image: url(/assets/images/canopy2.png);
+  // background-repeat: no-repeat;
+  // background-position: top right;
+  // background-size: 10%;
+}
 
 .mbtablestyle {
   border-collapse: collapse;
