--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -11,7 +11,7 @@
     </p> </div>
         <div>
           
-      <p class="f3 mb0 ">Read more about <a class="link accent" href="/people/">Our team.</a></p>
+      <p class="f3 mb0 ">Read more about <a class="link accent" href="/people/">our team.</a></p>
         </div>
     </div>
     <div class="w-50">
