--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {%- include head.html -%}
 
-  <body class="sans-serif antialiased debug {% unless page.title == 'Dripline' %} root-2 {% endunless %}">
+  <body class="sans-serif antialiased debug  {% unless page.title == 'Dripline' %} root-and-lines {% else %} electric-lines {% endunless %}">
 
     {%- include sections.html tag="header" path="header.html" class="pt4 flex items-baseline mw9 center justify-between" -%}
     <main class="mw9 center">
