--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,7 +1,7 @@
 <div class=" pr0 mb5">
   
   <container class="flex justify-between">
-    <div class="flex flex-column justify-between measure-wide">
+    <div class="flex flex-column  measure-wide">
   <h2 class="f1 f-subheadline-l sans-serif accent mb1-l mt0-l">Who we are</h2>
         <div> <p class="f3 lh-copy   ">
       We are a team of technologists, designers, and community organizers who value working with mission-oriented partners.
