--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -27,5 +27,8 @@
       </dd>
     </dl>
   </div>
-  <div class="block-3 contain w-25-l"></div>
+  <div class=" contain w-25-l">
+    <img class ="mw-50" src="/assets/images/block3.png">
+    <img src="/assets/images/block3.png">
+  </div>
 </div>
