--- a/_includes/sections/join-the-team.html
+++ b/_includes/sections/join-the-team.html
@@ -1,24 +1,30 @@
-<div id="openings" class="flex-l items-center mv2 ">
+<div id="openings" class="flex-l items-center mv2">
   <div class="w-100-l">
     <h2 class="f1 f-subheadline-l sans-serif accent mb1">Join the team</h2>
 
-    <h3 class="f3 mb5 f3-l normal lh-solid measure dark-gray sans-serif">Find out more about open positions and pathways to membership, which are documented in the <a href="https://handbook.hypha.coop/member-workers.html">Handbook</a>.</h3>
-    
-    <h3 class="mb4 mt0 f2">View our job openings</h3>
+    <h3 class="f3 mb5 f3-l normal lh-solid measure dark-gray sans-serif">
+      Find out more about open positions and pathways to membership, which are
+      documented in our
+      <a href="https://handbook.hypha.coop/member-workers.html">Handbook</a>.
+    </h3>
+
+    <!-- <h3 class="mb4 mt0 f2">View our job openings</h3> -->
     <div class="w-100 flex flex-wrap mb4">
-    {% for opening in site.openings %}
-    <div class="measure pr5 mb3">
-      <a class="no-underline" href="{{ opening.url | relative_url }}">
-      <h4 class="f3 mt0 mb2 sans-serif normal accent link underline-hover lh-title"> {{ opening.title }} </h4>
-      </a>
-      <div class="mt0 f5 mb3 dark-gray measure lh-copy"> {{ opening.excerpt }} </div>
-      <p class="f5 fw6 gray mt0">Posted on {{ opening.prepared-on-date }}</p>
+      {% for opening in site.openings %}
+      <div class="measure pr5 mb3">
+        <a class="no-underline" href="{{ opening.url | relative_url }}">
+          <h4
+            class="f3 mt0 mb2 sans-serif normal accent link underline-hover lh-title"
+          >
+            {{ opening.title }}
+          </h4>
+        </a>
+        <div class="mt0 f5 mb3 dark-gray measure lh-copy">
+          {{ opening.excerpt }}
+        </div>
+        <p class="f5 fw6 gray mt0">Posted on {{ opening.prepared-on-date }}</p>
+      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
   </div>
-
-    <h3 class="mb3 mt0 f2">Read our membership policies</h3>
-      <p class="ml0 mt0 f3 pv2"><a class="accent f3 link underline-hover" href="https://handbook.hypha.coop/member-workers.html">Handbook</a></p>
-  </div>
-
 </div>
