add more alt text

--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -27,8 +27,8 @@
       </dd>
     </dl>
   </div>
-  <div class=" contain w-25-l">
-    <img class ="mw-50" alt="" src="/assets/images/block3.png">
-    <img alt="" src="/assets/images/block3.png">
+  <div class=" contain  w-25-l">
+    <img class ="mw-50" alt="server" src="/assets/images/block3.png">
+    <img alt="server" src="/assets/images/block3.png">
   </div>
 </div>
