--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -8,10 +8,10 @@
     </p>
   </div>
   <div class="w-25 pt5">
-    <img  alt="" src="/assets/images/block1.png"/>
+    <img  alt="computer chip" src="/assets/images/block1.png"/>
   </div>
   <div class="w-25 pt5">
-    <img  alt="" src="/assets/images/block1.png"/>
+    <img  alt="computer chip" src="/assets/images/block1.png"/>
   </div>
 </div>
 
