--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -2,7 +2,7 @@
   <div class="w-75-l">
     <h2 class="f1 f-subheadline-l sans-serif accent mb1">Work with us</h2>
 
-    <h3 class="f3 f3-l normal lh-solid measure dark-gray sans-serif">
+    <h3 class="f3 f3-l normal lh-solid measure  sans-serif">
       We would love to hear from you about new projects, partnerships, and
       collaborations.
     </h3>
