--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,8 @@
   <meta name="twitter:description" content="{{ meta_description }}">
   <meta name="twitter:image" content="{{ meta_image | relative_url }}">
   <meta name="theme-color" content="#9900FC">
+  <link rel="preload" as="font" href="/assets/fonts/WorkSans-VariableFont_wght.woff2" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" as="font" href="/assets/fonts/WorkSans-Italic-VariableFont_wght.woff2" type="font/woff2" crossorigin="anonymous">
 
   {% feed_meta %}
 
