add quick fixes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {%- include head.html -%}
 
-  <body class="sans-serif antialiased debug  {% if page.title == 'Dripline' %} dripline-and-lines {% elsif page.title == 'Work' %} network-and-lines {% elsif page.title == 'People' %} mushroom-and-lines {% else %} root-and-lines {% endif %}">
+  <body class="sans-serif antialiased debug  {% if page.title == 'Dripline' %} dripline-and-lines {% elsif page.title == 'Work' %} network-and-lines {% elsif page.title == 'People' %} mushroom-and-lines {% elsif page.title == 'Home' %} root-and-lines {% endif %}">
 
     {%- include sections.html tag="header" path="header.html" class="pt4 flex items-baseline mw9 center justify-between" -%}
     <main class="mw9 center">
