--- a/_includes/sections/join-the-team.html
+++ b/_includes/sections/join-the-team.html
@@ -1,6 +1,6 @@
 <div id="openings" class="flex-l items-center mv2">
   <div class="w-100-l">
-    <h2 class="f1 f-subheadline-l sans-serif accent mb1">Join the team</h2>
+    <h2 class="f1 lh-solid f-subheadline-l sans-serif accent mb1">Join the team</h2>
 
     <h3 class="f3 mb5 f3-l normal lh-solid measure dark-gray sans-serif">
       Find out more about open positions and pathways to membership, which are
