format images for mobile

--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,8 +1,8 @@
 <div class=" pr0 mb5">
   
-  <container class="flex justify-between">
-    <div class="flex flex-column  measure-wide">
-  <h2 class="f1 f-subheadline-l sans-serif accent mb1-l mt0-l">Who we are</h2>
+  <container class="flex justify-between flex-nowrap-ns flex-wrap">
+    <div class="flex flex-column  measure-wide-ns w-100-s">
+      <h2 class="f1 f-subheadline-l sans-serif accent mb1-l mt0-l">Who we are</h2>
         <div> <p class="f3 lh-copy   ">
       We are a team of technologists, designers, and community organizers who value working with mission-oriented partners.
         <br/>
@@ -14,7 +14,7 @@
       <p class="f3 mb0 ">Read more about <a class="link accent" href="/people/">our team.</a></p>
         </div>
     </div>
-    <div class="w-50">
+    <div class="w-100 w-50-ns">
         <img  class="mw-100" src="/assets/images/block2.png" alt="mushroom x-rays"></img>
     </div>
   </container>
