format dripline and people for mobile

--- a/_includes/sections/join-the-team.html
+++ b/_includes/sections/join-the-team.html
@@ -11,7 +11,7 @@
     <!-- <h3 class="mb4 mt0 f2">View our job openings</h3> -->
     <div class="w-100 flex flex-wrap mb4">
       {% for opening in site.openings %}
-      <div class="measure pr5 mb3">
+      <div class="measure pr5-ns mb3">
         <a class="no-underline" href="{{ opening.url | relative_url }}">
           <h4
             class="f3 mt0 mb2 sans-serif normal accent link underline-hover lh-title"
