--- a/_layouts/dripline/post.html
+++ b/_layouts/dripline/post.html
@@ -11,7 +11,7 @@ layout: default
     </p>
   </div>
   <header class="mb4">
-    <h1 class="f1  sans-serif lh-solid mb3 mt0-l">{{ page.title }}</h1>
+    <h1 class="f1-ns f2 sans-serif lh-solid mb3 mt0-l">{{ page.title }}</h1>
     <h3 class="gray f6 f5-l lh-solid mt0">{{ page.date | date: site.date_format }}</h3>
   </header>
   <div class="lh-copy mw7 links-accent links-underline-hover">
