--- a/_includes/sections/work-preview.html
+++ b/_includes/sections/work-preview.html
@@ -3,9 +3,8 @@
   <div class="flex flex-between flex-wrap">
     {% assign works = site.work | where: 'preview', 'true' | sort: 'order' %} {%
     for work in works | where: 'preview', 'true' %}
-    <div class="w-33-l flex-column justify-left items-left center pr4 pl4 mb2 tl">
-      <!-- <div class="w-100 h4 pv3 tl pl3 white bg-accent">Logo</div> -->
-      <h2 class="f3 sans-serif accent">{{ work.title }}</h2>
+    <div class="w-33-l measure flex-column justify-left items-left center pr4 pl4 mb2 tl">
+      <h2 class="f3 ">{{ work.title }}</h2>
       <div class="pb3 f4 lh-copy">{{ work.excerpt | markdownify }}</div>
     </div>
     {% endfor %}
