alt text and tablet image sizing

--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -1,5 +1,5 @@
-<div class=" flex-l justify-start  mb4 ">
-  <div class="measure-wide mr5-ns">
+<div class=" flex-ns justify-start  mb4 ">
+  <div class="measure-wide-l measure-m mr5-l">
     <h2 class="f1 f-subheadline-l sans-serif mb4 mt0 accent">Our values</h2>
     <p class="measure f3 lh-copy">
       Our core values reflect our approach in cultivating respectful and
@@ -7,10 +7,10 @@
       We bring this ethos to every project we undertake.
     </p>
   </div>
-  <div class="dn db-ns w-25 pt5">
+  <div class="dn db-l w-25 pt5">
     <img  alt="computer chip" src="/assets/images/block1.png"/>
   </div>
-  <div class="w-25-ns w-100 pt5-ns pt1">
+  <div class="w-25-l w-50-m mw-100 pt5-ns pt1">
     <img  alt="computer chip" src="/assets/images/block1.png"/>
   </div>
 </div>
