--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,5 +1,5 @@
 <div class=" flex justify-between flex-nowrap-ns flex-wrap mb5">
-    <div class="flex flex-column  measure-wide-ns">
+    <div class="flex flex-column  measure-wide-l measure-m">
       <h2 class="mb1-l mt0-l">Who we are</h2>
       <div><p class="f3 lh-copy">
         We are a team of technologists, designers, and community organizers who value working with mission-oriented partners.
@@ -12,6 +12,6 @@
       </p></div>
     </div>
     <div class="w-100 w-50-ns">
-        <img  class="mw-100" src="/assets/images/block2.png" alt="mushroom x-rays"/>
+        <img  class="mw-100" src="/assets/images/block2.png" alt="mushrooms growing out of a computer chip"/>
     </div>
 </div>
