--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -28,7 +28,7 @@
     </dl>
   </div>
   <div class=" contain  w-25-l">
-    <img class ="mw-50 di-ns dn" alt="server" src="/assets/images/block3.png">
+    <img class ="mw-50 di-l dn" alt="server" src="/assets/images/block3.png">
     <img alt="server" src="/assets/images/block3.png">
   </div>
 </div>
