Team bios padding updates
Now fully centre aligned!

--- a/_includes/sections/team-bios.html
+++ b/_includes/sections/team-bios.html
@@ -1,7 +1,7 @@
 <div class="flex flex-wrap justify-start mb4 contain">
   {% for person in site.people %}
   {% if person.hidden != true %}
-  <article class="w-33-l pl0 pr6-ns  mb6 center">
+  <article class="w-33-l pa5-ns mb4 center">
     <div class="flex items-end">
       <img src="/assets/images/avatars/{{ person.avatar }}" alt="{{ person.name }}" class=" w4  tc white f3 v-mid h4"></img>
       <div class="pl4 w-50 pt0 pt0-l v-btm pb0">
