--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -1,4 +1,4 @@
-<div class=" flex-ns justify-start  mb4 ">
+<div class=" flex-ns justify-start mt4 mt6-ns mt4-l">
   <div class="measure-wide-l measure-m mr5-l">
     <h2 class="f1 f-subheadline-l sans-serif mb4 mt0 accent">Our values</h2>
     <p class="measure f3 lh-copy">
