--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -1,4 +1,4 @@
-<div class="flex  justify-start lh-copy f3 mb4">
+<div class="flex  justify-start lh-copy f3 mt6 mb4">
   <div class="mr3">
       <h2 class="">What we do</h2>
     <p class="lh-copy f3 measure mt0">
@@ -25,7 +25,7 @@
   </ul>
   <div id="what_we_do-descriptions">
     {% for element in page.what_we_do %}
-    <p id="{{ element.title }}-description" class="measure f4 lh-copy">
+    <p id="{{ element.title }}-description" class="measure-wide f4 lh-copy">
       {{ element.description }}
     </p>
     {% endfor %}
