--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,4 +1,4 @@
-<div class=" flex justify-between flex-nowrap-ns flex-wrap mb5">
+<div class=" flex justify-between flex-nowrap-ns flex-wrap mt6-ns mt5">
     <div class="flex flex-column  measure-wide-l measure-m">
       <h2 class="mb1-l mt0-l">Who we are</h2>
       <div><p class="f3 lh-copy">
