--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -1,4 +1,4 @@
-<div class="flex-l mv2">
+<div class="flex-l mt6-ns mt4 mb6-ns mb4">
   <div class="w-75-l">
     <h2 class="f1 f-subheadline-l sans-serif accent mb1">Work with us</h2>
 
@@ -27,7 +27,7 @@
       </dd>
     </dl>
   </div>
-  <div class=" contain  w-25-l">
+  <div class="contain w-25-l mt5">
     <img class ="mw-50 di-l dn" alt="server" src="/assets/images/block3.png">
     <img alt="server" src="/assets/images/block3.png">
   </div>
