Footer hierarchy update
Makes land acknowledgement body text gray

--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -18,7 +18,7 @@
   <div class="w-100 w-50-l">
     <h4 class="f4 normal"><span class="accent">⚑</span> Hypha is rooted in Tkaronto (Toronto), Canada.</h4>
     
-    <h4 class="f5 measure normal lh-copy">
+    <h4 class="f5 measure normal lh-copy gray">
       Hypha acknowledges the sacred land we work on is the territory of many nations and was the subject of the Dish with One Spoon Wampum Belt Covenant, an agreement to peaceably share and care for the resources around the Great Lakes. Today it is still home to many First Nations, Inuit, and Métis peoples from across Turtle Island.
     </h4>
   </div>
