Minor spacing & breakpoint improvements
Oops!  Fixed :)

--- a/_includes/sections/join-the-team.html
+++ b/_includes/sections/join-the-team.html
@@ -1,6 +1,6 @@
 <div id="openings" class="flex-l items-center mv2">
   <div class="w-100-l">
-    <h2 class="f1 lh-solid f-subheadline-l tc sans-serif accent mb1">Join the team</h2>
+    <h2 class="f1 lh-solid f-subheadline-l tc sans-serif accent mb4">Join the team</h2>
 
     <h3 class="f3 mb5 f3-l normal lh-solid tc mr-auto ml-auto measure dark-gray sans-serif">
       Find out more about open positions and pathways to membership, which are
@@ -11,7 +11,7 @@
     <!-- <h3 class="mb4 mt0 f2">View our job openings</h3> -->
     <div class="w-100 flex flex-wrap mb4">
       {% for opening in site.openings %}
-      <div class="measure w-33 pr3 pl3 mb3">
+      <div class="measure w-33-m w-33-l w100 pr3 pl3 mb3">
         <a class="no-underline" href="{{ opening.url | relative_url }}">
           <h4
             class="f3 mt0 mb2 sans-serif normal accent link underline-hover lh-title"
