--- a/_includes/sections/join-the-team.html
+++ b/_includes/sections/join-the-team.html
@@ -1,13 +1,18 @@
 <div id="openings" class="flex-l items-center mv2">
   <div class="w-100-l">
     <h2 class="f1 lh-solid f-subheadline-l tc sans-serif accent mb4">Join the team</h2>
-
+    {% if site.openings == empty %}
+    <h3 class="f3 mb5 f3-l normal lh-solid tc mr-auto ml-auto measure dark-gray sans-serif">
+      There are no open positions at this moment. Find out more about pathways to membership in our
+      <a href="https://handbook.hypha.coop/member-workers.html">Handbook</a>.
+    </h3>
+    {% else %}
     <h3 class="f3 mb5 f3-l normal lh-solid tc mr-auto ml-auto measure dark-gray sans-serif">
       Find out more about open positions and pathways to membership, which are
       documented in our
       <a href="https://handbook.hypha.coop/member-workers.html">Handbook</a>.
     </h3>
-
+    {% endif %}
     <!-- <h3 class="mb4 mt0 f2">View our job openings</h3> -->
     <div class="w-100 flex flex-wrap mb4">
       {% for opening in site.openings %}
