exception if bio contains link

--- a/_includes/sections/team-bios.html
+++ b/_includes/sections/team-bios.html
@@ -12,17 +12,25 @@
       </div>
     </div>
     <div
-      class="lh-copy measure center f5 pt3 "
+      class="lh-copy measure center f5 pt3"
+
+      {% unless person.link and person.excerpt == person.content %}
       data-excerpt="{{ person.excerpt }}"
       data-content="{{ person.content }}"
+      {% endunless %}
+      
       data-toggled="false"
       id="{{ person.name }}"
       onclick="toggleBio(this.id, this.dataset.excerpt, this.dataset.content);"
     >
-      {{ person.excerpt | markdownify }} {% unless person.excerpt ==
-      person.content %}
+      {{ person.excerpt | markdownify }}
+
+      {% unless person.excerpt == person.content %}
+
       <p class="mv0 link accent {% unless person.excerpt == person.content %} pointer {% endunless %}">[read more]</p>
       {% endunless %}
+
+
     </div>
   </article>
   {% endif %}
