--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -1,15 +1,15 @@
 <div class="flex sans-serif ">
   <div class="w-100">
-    <a href="{{ "/" | relative_url }}" class="flex flex-wrap  no-underline " id="hypha-title"><h2 class="f4 f3-ns fw9 ttu ma0 accent mr2-ns mr4">Hypha</h2><h2 class=" gray f4 fw5 f3-ns normal ma0">Worker Co-operative</h2></a>
+    <a href="{{ "/" | relative_url }}" class="flex flex-wrap  no-underline " id="hypha-title">
+      <h1 class="f4 f3-ns fw9 ttu ma0 accent mr2-ns mr4">Hypha</h1>
+      <h2 class=" gray f4 fw5 f3-ns normal ma0">Worker Co-operative</h2></a>
   </div>
-  <nav id="menu" aria-label="Menu" class="dn flex-l flex-column flex-row-l fixed static-l bg-white w-75 items-end ph3 ph0-l right-0 top-0 bottom-0 tl-l pt4 pt0-l z-max">
+  <nav id="menu" aria-label="Menu" class="dn flex-l flex-column flex-row-l absolute static-l bg-white w-100 items-end ph3 ph0-l right-0 top-0 bottom-0 tl-l pt4 pt0-l z-max">
     {%- include sections/navigation.html -%}
+    <a href="#" class="dn-l bg-accent top-0 left-0 bottom-0 w-25 backdrop o-60 z-max absolute" tabindex="-1"></a>
   </nav>
-  <a href="#" class="dn bg-accent fixed top-0 left-0 bottom-0 w-25 backdrop o-60 z-max" tabindex="-1" hidden></a>
+  <div id="white-space" class="dn vh-95 s0 relative"></div>
 </div>
-<!-- <div class="dn flex-l"> -->
-  <!-- <p class="gray ma0 dib mr2 b">Email</p> -->
-  <!-- <a class="accent link underline-hover" href="mailto:{{ site.email-hidden }}">{{ site.email }}</a> -->
-<!-- </div> -->
+
 
 <a href="#menu" aria-label="Open menu" class="dn-l f4 f3-ns link underline-hover accent sans-serif">Menu</a>
