--- a/_includes/sections/join-the-team.html
+++ b/_includes/sections/join-the-team.html
@@ -4,13 +4,13 @@
     {% if site.openings == empty %}
     <h3 class="f3 mb5 f3-l normal lh-solid tc mr-auto ml-auto measure dark-gray sans-serif">
       There are no open positions at this moment. Find out more about pathways to membership in our
-      <a href="https://handbook.hypha.coop/member-workers.html">Handbook</a>.
+      <a href="https://handbook.hypha.coop/Hypha-Worker-Co-operative/member-workers.html">Handbook</a>.
     </h3>
     {% else %}
     <h3 class="f3 mb5 f3-l normal lh-solid tc mr-auto ml-auto measure dark-gray sans-serif">
       Find out more about open positions and pathways to membership, which are
       documented in our
-      <a href="https://handbook.hypha.coop/member-workers.html">Handbook</a>.
+      <a href="https://handbook.hypha.coop/Hypha-Worker-Co-operative/member-workers.html">Handbook</a>.
     </h3>
     {% endif %}
     <!-- <h3 class="mb4 mt0 f2">View our job openings</h3> -->
