--- a/_layouts/cosmos/post.html
+++ b/_layouts/cosmos/post.html
@@ -4,7 +4,8 @@ layout: default
 
 <section class="mt4 ph3 ph5-l">
   <div class="mb4 mt5">
-    <a class="sans-serif link underline-hover accent" title="See more blog posts" href="{% link cosmos.html %}">← Dripline</a>
+    <a class="sans-serif link underline-hover accent" title="See more blog posts" href="{% link cosmos.html %}">← Back
+      to Hypha Does Cosmos</a>
   </div>
   <header class="mt5 mb6 mw8 center">
     <h1 class="f1-ns f2 sans-serif lh-solid mb3 mt0-l">{{ page.title }}</h1>
@@ -18,10 +19,11 @@ layout: default
       {% endif %}
     </div>
   </header>
-  <article id="dripline" class="mw8 center">
+  <article id="cosmos" class="mw8 center">
     {{ content }}
   </article>
   <footer class="mt5 bt bw2 b--light-gray">
-    <p><a class="link accent underline-hover" href="{% link cosmos.html %}">← <span class="gray">See more blog posts</span></a></p>
+    <p><a class="link accent underline-hover" href="{% link cosmos.html %}">← <span class="gray">See more blog
+          posts</span></a></p>
   </footer>
 </section>
