--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -1,11 +1,16 @@
     <p class="f3 f4-l fw7 lh-copy dark-gray">{{ site.footer }}</p>
 <div class="flex-l items-baseline">
   <div class="w-100 w-50-l pr5">
-   <ul class="list pl0 flex flex-wrap f5 f4-l">
+   <ul class="list pl0 flex flex-wrap f5 f4-l items-center">
       <li class="pr3"><a href="{{ site.github }}" class="accent link underline-hover" target="_blank" rel="noopener">GitHub</a></li>
       <li class="pr3"><a href="{{ site.linkedin }}" class="accent link underline-hover" target="_blank" rel="noopener" data-proofer-ignore>LinkedIn</a></li>
       <li class="pr3"><a href="{{ site.twitter }}" class="accent link underline-hover" target="_blank" rel="noopener">Twitter</a></li>
       <li class="pr3"><a href="{{ site.handbook }}" class="accent link underline-hover" target="_blank" rel="noopener">Handbook</a></li>
+      <li class="pr3"><a href="{{ site.rss }}" class="accent link underline-hover" target="_blank" rel="noopener">
+        RSS
+        <img style="width:14px;"  src="/assets/images/logos/rss-logo.png" alt="rss icon">
+        </a>
+        </li>
     </ul> <p class="f6 f5-l lh-copy">Data and privacy policies are in our handbook: <a href="https://handbook.hypha.coop/Policies/data.html" target="_blank" class="accent link underline-hover" rel="noopener">How We Use Data</a> and <a href="https://handbook.hypha.coop/Policies/working-open.html" target="_blank" class="accent link underline-hover" rel="noopener">Working Open</a>.</p>
     <p class="f6 f5-l lh-copy">
       This site is published using <a href="https://distributed.press/" target="_blank" class="accent link underline-hover" rel="noopener">Distributed Press</a>.
