Add 'artists' and 'engineers' to who we are

--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -2,7 +2,7 @@
     <div class="flex flex-column  measure-wide-l measure-m">
       <h2 class="mb1-l mt0-l">Who we are</h2>
       <div><p class="f3 lh-copy">
-        We are a team of technologists, designers, and community organizers who value working with mission-oriented partners.
+        We are a team of technologists, artists, engineers, designers, and community organizers who value working with mission-oriented partners.
         <br/>
         <br/>
         Together, we have years of experience building open source technologies and sustainable communities.
