Update RSS link to be relative and adjust footer to reflect changes

--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -6,7 +6,7 @@
       <li class="pr3"><a href="{{ site.linkedin }}" class="accent link underline-hover" target="_blank" rel="noopener" data-proofer-ignore>LinkedIn</a></li>
       <li class="pr3"><a href="{{ site.twitter }}" class="accent link underline-hover" target="_blank" rel="noopener">Twitter</a></li>
       <li class="pr3"><a href="{{ site.handbook }}" class="accent link underline-hover" target="_blank" rel="noopener">Handbook</a></li>
-      <li class="pr3"><a href="{{ site.rss }}" class="accent link underline-hover" target="_blank" rel="noopener">
+      <li class="pr3"><a href="{{ site.url }}{{ site.rss }}" class="accent link underline-hover" target="_blank" rel="noopener">
         RSS
         <img style="width:14px;"  src="/assets/images/logos/rss-logo.png" alt="rss icon">
         </a>
