--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,4 +28,15 @@
   {% feed_meta %}
 
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}?{{ site.time | date: '%s%N' }}">
+
+  {% if page.activity %}
+    <link href="{{ page.activity.url | absolute_url }}" rel="alternate" type="application/activity+json" />
+  {% endif %}
+
+  <meta property="profile:username" content="{{ site.activity_pub_profile }}" />
+
+  {%- if site.actor -%}
+    <link rel="me" href="{{ site.actor.url | absolute_url }}" />
+  {%- endif -%}
+
 </head>
