--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% if page.collection == "posts" %}Dripline: {% endif %}{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
-  <script defer data-domain="hypha.coop" src="http://159.203.41.161/js/script.js"></script>
+  <script defer data-domain="hypha.coop" src="https://analytics.hypha.coop/js/script.js"></script>
 
   <meta property="og:title" content="{{ meta_section | escape }}{{ meta_title | escape }}">
   <meta name="description" content="{{ meta_description }}">
