Add rel=\me\ link to head.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,8 @@
   <meta name="theme-color" content="#9900FC">
   <link rel="preload" as="font" href="/assets/fonts/WorkSans-VariableFont_wght.woff2" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" as="font" href="/assets/fonts/WorkSans-Italic-VariableFont_wght.woff2" type="font/woff2" crossorigin="anonymous">
-
+  <link href="https://cosocial.ca/@hyphacoop" rel="me">
+  
   {% feed_meta %}
 
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}?{{ site.time | date: '%s%N' }}">
