Add 'noopener' rel attribute to Mastodon link in footer.html

--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -5,7 +5,7 @@
       <li class="pr3"><a href="{{ site.github }}" class="accent link underline-hover" target="_blank" rel="noopener">GitHub</a></li>
       <li class="pr3"><a href="{{ site.linkedin }}" class="accent link underline-hover" target="_blank" rel="noopener" data-proofer-ignore>LinkedIn</a></li>
       <li class="pr3"><a href="{{ site.twitter }}" class="accent link underline-hover" target="_blank" rel="noopener">Twitter</a></li>
-      <li class="pr3"><a href="{{ site.mastodon }}" class="accent link underline-hover" target="_blank" rel="me">Mastodon</a></li>
+      <li class="pr3"><a href="{{ site.mastodon }}" class="accent link underline-hover" target="_blank" rel="noopener me">Mastodon</a></li>
       <li class="pr3"><a href="{{ site.handbook }}" class="accent link underline-hover" target="_blank" rel="noopener">Handbook</a></li>
       <li class="pr3"><a href="{{ site.url }}{{ site.rss }}" class="accent link underline-hover" target="_blank" rel="noopener">
         RSS
